welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:32: error: not found: value faireMotif
faireMotif(Color.red)
^FlowerPot:33: error: not found: value faireMotif
faireMotif(Color.blue)
^FlowerPot:34: error: not found: value faireMotif
faireMotif(Color.green)
^FlowerPot:35: error: not found: value faireMotif
faireMotif(Color.yellow)
^